# ruff_vscode_multiroot

./: README.md  ruff_multiroot_test.code-workspace
libs/a_lib/: pyproject.toml
services/b_service/: b_service.py  pyproject.toml
